Added a new method
New method added for the author-category method and correct some words in the swagger documentation .
